--- a/product.html
+++ b/product.html
@@ -12,7 +12,9 @@
     }
 
     body {
-      font-family: Arial, sans-serif;
+      display: grid;
+      grid-template-rows: auto 1fr auto;
+      min-height: 100vh;
       background-color: #f9f9f9;
     }
 
@@ -64,9 +66,8 @@
       background-color: #333;
       color: white;
       text-align: center;
-      padding: 15px;
-      font-size: 14px;
-      margin-top: 20px;
+      padding: 10px 0;
+       
     }
 
     @media (max-width: 768px) {
@@ -114,7 +115,7 @@
   </div>
 
   <footer>
-    Presented By : Affan Shaikh
+   <p>Product by Affan Shaikh &copy; 2025</p>
   </footer>
 
 </body>
